--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 </style>
 </head>
 <body>
-<h1>Children's Health Information and Registry Program</h1>
+<h1><a href="http://chirp.unr.edu">Children's Health Information and Registry Program</a></h1>
 <h2>Linking children's health information to support healthy outcomes</h2>
 
 <p>The Children's Health Information and Registry Program, or CHIRP, is a collaboration between the University of Nevada, Reno and northern Nevada's Child Health Institute (CHI) to improve the health of children born in Washoe County. CHIRP is developing a patient registry and health intelligence platform that receives, stores and organizes the health information of Washoe County children. The platform will serve CHI and the pediatric community by providing comprehensive, longitudinal data for tailored patient care and research.</p>
