--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@ body {
 <li>A digital product that sends secure, encrypted alerts to a child's healthcare providers, updating them on their patient's health progress.</li>
 </ol>
 
+<hr/>
+
+<p><a href="http://github.com/unreno/chirp/wiki">Github Wiki</a></p>
 </body>
 </html>
