--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ body {
 
 <hr/>
 
-<p><a href="http://github.com/unreno/chirp/wiki">Github Wiki</a></p>
+<p>
+<a href="http://github.com/unreno/chirp">Github Repo</a>
+&nbsp;|&nbsp;
+<a href="http://github.com/unreno/chirp/wiki">Github Wiki</a>
+</p>
 </body>
 </html>
