--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@ body {
 	font-family: Calibri;
 	color: white;
 }
+
+/* from view-source:http://www.unr.edu/bundles/css?v=38zvKL_CpfxYAhfhGRkTF2ZhSeGgBMI4pq2PLwE5nsI1 */
+/* Small screens */
+@media only screen and (max-width: 767px) {
+}
+/* Non-mobile screens */
+@media (min-width: 768px) {
+}
+/* Medium screens */
+@media only screen and (max-width: 1205px) and (min-width: 768px) {
+}
+/* Very large screens */
+@media only screen and (min-width: 1441px) {
+}
+/* Retina love :) */
+@media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6/2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
+}
 </style>
 </head>
 <body>
