--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body {
 <h1><a href="http://chirp.unr.edu">Children's Health Information and Registry Program</a></h1>
 <h2>Linking children's health information to support healthy outcomes</h2>
 
-<p>The Children's Health Information and Registry Program, or CHIRP, is a collaboration between the University of Nevada, Reno and northern Nevada's Child Health Institute (CHI) to improve the health of children born in Washoe County. CHIRP is developing a patient registry and health intelligence platform that receives, stores and organizes the health information of Washoe County children. The platform will serve CHI and the pediatric community by providing comprehensive, longitudinal data for tailored patient care and research.</p>
+<p>The Children's Health Information and Registry Program, or CHIRP, WAS a collaboration between northern Nevada's Child Health Institute (CHI) and the University of Nevada, Reno, but is now solely UNR, to improve the health of children born in Washoe County. CHIRP is developing a patient registry-based health intelligence platform that receives, stores and organizes the health information of Washoe County children. The platform will serve CHI and the pediatric community by providing comprehensive, longitudinal data for tailored patient care and research.</p>
 <p>This health intelligence platform will store all of its data securely at the University of Nevada School of Medicine, Reno campus. The platform is comprised of three components:</p>
 <ol>
 <li>An observational registry that collects medical and public health data from providers and the State of Nevada on children born in Washoe County until their 18th birthday.Examples include birth and immunization records, newborn screenings and hospital discharge records .</li>
